<resources>
    <string name="app_name">Tabuk App</string>
    <string name="welcome_to_tabuk_app">Welcome to Tabuk App</string>
    <string name="join_as_a_guest">Join as a guest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_visitor_maps">Map</string>
    <string name="show_places">Show places</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="update_profile">Update profile</string>
    <string name="id">Id</string>
    <string name="faculty">Faculty</string>
    <string name="title_activity_add_maps">Map</string>
    <string name="location_name">Location name</string>
    <string name="add_location">Add Location</string>
    <string name="notification_content">Notification content</string>
    <string name="level">Level</string>
    <string name="add_notification">Add Notification</string>
    <string name="course_name">Course name</string>
    <string name="course_day">Course day</string>
    <string name="course_time">Course time</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="select_location">Select location</string>
    <string name="title_activity_show_place_on_maps">Map</string>
    <string name="old_password">Old password</string>
    <string name="add_exam">Add Exam</string>
    <string name="course_date">Course date</string>
</resources>